版面提案修改 #20150212

--- a/layout/v2/content.html
+++ b/layout/v2/content.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>【提案】藍色洋甘菊camomillablu</title>
+<title>【提案】藍色洋甘菊camomillablu v2</title>
 <style>
   body{ margin:0;
         padding:0;
@@ -11,24 +11,25 @@
 	  display:block;
 	  width:1160px;
 	  margin:0 auto 50px auto}
+  #box_top, #box_main, #box_footer{display:block; width:100%} 
   #box_top{
-	  display:block;
-	  width:1160px;
 	  height:55px;
 	  background: url(images/bg_top.png) no-repeat}
   #box_main{
-	  display:block;
-	  width:1160px;
-	  height:1093px;
-	  background: url(images/bg_index.jpg) no-repeat}	  		
+	  height:857px;
+	  background: url(images/bg_content.jpg) no-repeat}
+  #box_footer{
+	  height:49px;
+	  background: url(images/bg_footer.png) no-repeat}	  	  		
 </style>		
 </head>
 
 <body>
    <div id="wrap">
-   <a href="content.html">
+   <a href="index.html">
       <div id="box_top"></div>
       <div id="box_main"></div>
+      <div id="box_footer"></div>
    </a>   
    </div>
 </body>
