--- a/layout/v1/content.html
+++ b/layout/v1/content.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>【提案】藍色洋甘菊camomillablu</title>
+<title>【提案】藍色洋甘菊camomillablu v1</title>
 <style>
   body{ margin:0;
         padding:0;
