產品特色頁完成 #20150313

--- a/css/xue_201503.css
+++ b/css/xue_201503.css
@@ -339,7 +339,18 @@ footer a:link,footer a:visited{ color:#404040; text-decoration:none}
 	height:102px;
 	background:url(../images/btn_play.png) no-repeat;
 	text-indent:-9999px}
-.box_film a:hover{ background:url(../images/btn_play.png) 0 -102px no-repeat;}
+.box_film a:hover{ background:url(../images/btn_play.png) 0 -102px no-repeat}
+.box_photo{
+	display:block;
+	width:900px;
+	margin:15px auto}
+.box_photo li{
+	display: inline-block;
+	width:100px;
+	height:100px;
+	margin:0 15px;
+	padding:5px;
+	border:1px solid #EBEBEB}
 
 /*3-3.商品專區*/
 #box_shop{
