版面修改 #20150612 1.產品圖片更換 2.首頁FB區塊寬度調整

--- a/css/xue_201503.css
+++ b/css/xue_201503.css
@@ -190,7 +190,8 @@ footer a:link,footer a:visited{ color:#404040; text-decoration:none}
 	display:block;
 	width:1074px;
 	margin:0 auto}
-.box_author, .box_hotsale, .fb-like-box, .fb-page{ display:block; float:left}	
+.box_author, .box_hotsale, .fb-like-box, .fb-page{ display:block; float:left}
+.fb-page{ width:280px}	
 .box_author{
 	width:121px;
 	min-height:568px;
